# apps/api/src/task/task.controller.ts
@@ -1,5 +1,6 @@
 import { Body, Controller, Delete, Get, Param, ParseIntPipe, Patch, Post, UseGuards } from '@nestjs/common'
 import { AuthGuard } from '@nestjs/passport'
+import { ApiResponse } from '@nestjs/swagger'
 import { plainToInstance } from 'class-transformer'
 import { AuthorizedUser } from '../auth/strategies/jwt.strategy'
 import { JwtPayload } from '../model/auth.model'
@@ -15,6 +16,7 @@ export class TaskController {
     constructor(private readonly taskService: TaskService) {}
 
     @Post()
+    @ApiResponse({ type: CreateTaskResponseDto })
     async create(
         @AuthorizedUser() user: JwtPayload,
         @Body() dto: CreateTaskRequestDto,
@@ -24,18 +26,21 @@ export class TaskController {
     }
 
     @Get()
+    @ApiResponse({ type: [TaskResponseDto] })
     async findAll(@AuthorizedUser() user: JwtPayload): Promise<TaskResponseDto[]> {
         const tasks = await this.taskService.findAll(user.sub)
         return tasks.map((t) => plainToInstance(TaskResponseDto, t))
     }
 
     @Get(':id')
+    @ApiResponse({ type: TaskResponseDto })
     async findOne(@AuthorizedUser() user: JwtPayload, @Param('id', ParseIntPipe) id: number): Promise<TaskResponseDto> {
         const task = await this.taskService.findOne(user.sub, id)
         return plainToInstance(TaskResponseDto, task)
     }
 
     @Patch(':id')
+    @ApiResponse({ type: TaskResponseDto })
     async update(
         @AuthorizedUser() user: JwtPayload,
         @Param('id', ParseIntPipe) id: number,
@@ -46,6 +51,7 @@ export class TaskController {
     }
 
     @Delete(':id')
+    @ApiResponse({ type: Boolean })
     remove(@AuthorizedUser() user: JwtPayload, @Param('id', ParseIntPipe) id: number) {
         return this.taskService.remove(user.sub, id)
     }
